2010-09-03 Matthias Scholz <ms@jammerhund.de>
	* com.vividsolutions.jump.io.ShapefileReader
		* read() fix for loading a Shapefile from a project or with the legacy "Load Dataset" method
		  in both cases the default CharSet is used

2010-09-03 Matthias Scholz <ms@jammerhund.de>
	* Possibility to select a charset for opening a ESRI Shape file (String attributes)
	* language/jump_de.properties, language/jump_en.properties
		* added key org.openjump.core.ui.plugin.file.charset
	* org.openjump.OpenJumpConfiguration
		* loadOpenJumpPlugIns() added Field Component Factory for "CharSetComboBoxField"
		* postExtensionInitialization() added FileLoader option for shape files
	* com.vividsolutions.jump.io.ShapefileReader
		* read() added charset setting for DbfFile (mydbf)
	* org.geotools.dbffile.DbfFile
		* added private variable charset and getter/setter methods
		* ParseRecordColumn(byte[] rec, int wantedCol) changed for creating returning String column with Charset
	* org.openjump.core.ui.plugin.file.open.OpenFileWizardState
		* getNextPanel() fixed wrong String comparison

2010-09-03 Matthias Scholz <ms@jammerhund.de>
	* Patch for selectionstyling
	* added org.openjump.core.ui.SelectionStyllingOptionsPanel class
	* com.vividsolutions.jump.workbench.ui.plugin.initialize()
		* SelectionStyllingOptionsPanel added
	* com.vividsolutions.jump.workbench.ui.renderer.AbstractSelectionRenderer
		* AbstractSelectionRenderer() changed
		* paint(Geometry geometry, Graphics2D g, Viewport viewport) changed
		* setSelectionLineColor() added
		* setSelectionPointSize() added
		* setSelectionPointForm() added
	* com.vividsolutions.jump.workbench.ui.renderer.FeatureSelectionRenderer  changed
	* com.vividsolutions.jump.workbench.ui.renderer.style.VertexStyle
		* Bugfix render(Graphics2D g) - outline draw and fill interchanged for right display of the vertices
	* language files
		* com.vividsolutions.jump.jump.properties
		* language.jump_de.properties

2010-08-29 sstein <sstein@geo.uzh.ch>